- Fixed build error in list.h with VC++ 2005.
- wxImage::Copy() forgot the alpha channel.
- Fixed wxSocketBase::InterruptWait on wxBase

All (GUI):

- Added space after list item number in wxHTML.
- wxCalendarCtrl drawing, positioning and hit-testing fixes.
- More checking of image validity before loading into wxImage.
- Added double-buffering to wxVListBox and fixed a scrolling issue.

wxGTK:

- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.
- Polygon and line drawing speeded up if there is no scaling.
- Fixed problems with CJK input method.
- Fixed wxNotebook::HitTest when the leftmost visible tab is not the
  actual first tab (has arrows for scrolling and is scrolled).

wxMSW:

- Fixed crash with ownerdrawn menu items accelerators (Perry Miller)
- wxFileDialog respects absence of wxCHANGE_DIG flag under NT (Brad Anderson).
- Fixed MDI context menu problem.
- Create msw/rcdefs.h in setup.h's directory, which can be included by
  resource files. It containts platform/compiler specific defines (such as
  target cpu) which can be used in #ifs in .rc files.
- Add support for Win64 manifests and VC++ 8 automatic manifests (see the
  wxMSW faq for details).
- New TARGET_CPU=amd64 (or 'ia64') option for the makefile.vc files which
  puts 64-bit builds in their own directory and adds /machine:amd64 or ia64
  to the link command.
- wxStatusBar::GetFieldRect now returns correct values under XP.
- wxStatusBar no longer corrupts surrounding windows on resize.
- Enable wxListCtrl in report mode to be able to use images in other
  columns, if ComCtl32 >= 470.
- Fixed problem where using SetValue and wxTE_RICH2 would cause control to
  show.
- Numpad special keys are now distinguished from normal keys.
- Menu codes now stripped before measuring control labels.